--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
-.w3-allerta {
-  font-family: "Allerta Stencil", Sans-serif;
+.w3-ibm-plex-sans {
+  font-family: 'IBM Plex Sans', sans-serif;
+}
+.w3-open-sans {
+  font-family: 'Open Sans', sans-serif;
 }
