--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+.w3-ibm-plex-mono {
+  font-family: 'IBM Plex Mono', monospace;
+}
 .w3-ibm-plex-sans {
   font-family: 'IBM Plex Sans', sans-serif;
 }
