--- a/index.css
+++ b/index.css
@@ -1,9 +1,1 @@
-.w3-ibm-plex-mono {
-  font-family: 'IBM Plex Mono', monospace;
-}
-.w3-ibm-plex-sans {
-  font-family: 'IBM Plex Sans', sans-serif;
-}
-.w3-open-sans {
-  font-family: 'Open Sans', sans-serif;
-}
+.w3-ibm-plex-mono{font-family:'IBM Plex Mono', monospace}.w3-ibm-plex-sans{font-family:'IBM Plex Sans', sans-serif}.w3-open-sans{font-family:'Open Sans', sans-serif}
